<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="action_settings">Settings</string>

    
    <string name="top_title">どっちが大きい ?</string>
    <string name="title_play_2">不等号の数字キーを押してください。</string>
    <string name="title_play_1">左右の計算の大小に合わせた</string>
    <string name="bottom_title">合計点数：</string>
    <string name="point">点</string>
    <string name="operator_greater">左が大きい</string>
    <string name="operator_lesser">左が大きい</string>
    <string name="operator_equal">同じ</string>
	<string name="play_point">間</string>
	
	
	
	<string name="app_name">ホームランスタジアム</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="start">スタート</string>
    <string name="ranking">ランキング</string>
    <string name="manual">遊び方</string>
    <string name="info">Info</string>
    <string name="score_center">ScoreCenter</string>
    <string name="score_define">Point</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="rankin">RANK IN!</string>
    <string name="play_again">Play Again</string>
    <string name="back_to_menu">Exit</string>
    <string name="textview_header_title">ジャンケン勝負</string>
    <string name="textview_countdown_title">合計点数：</string>
    <string name="textview_countdown_msec">点</string>
    <string name="button_start_title">スタート</string>
    <string name="opponent">相手</string>
    <string name="player">おなた</string>
    <string name="winThis">ジャンケンに勝て！</string>
    <string name="loseThis">ジャンケンに負けろ！</string>

    <!-- Text in Result Screen -->
    <string name="result_title">結果</string>
    <string name="result_explain">※数値が低いほど高得点</string>
    <string name="result_input_name">名前</string>
    <string name="result_input_name_explain">※入力不可の機種もアリ</string>
    <string name="result_title_btn_shareurl">WEBランキングに送る</string>
    <string name="result_title_btn_restart">リプレイ</string>
    <string name="lose_string">不正解</string>
    <string name="win_string">正解</string>
    <string name="scene_string">間</string>
    <string name="manual_string">        相手が出したジャンケンに対して、\n
「ジャンケンに勝て！」\n
「ジャンケンに負けろ！」\n
という指示がでますので\n
その指示に従ってグー、チョキ、パーをタップしてください。 \n
正解すると得点が加算されていきます。 \n
いっぱい遊んで、高得点を狙ってください！</string>
    <string name="manual_string_line1">相手が出したジャンケンに対して、</string>
    <string name="manual_string_line2">「ジャンケンに勝て！」</string>
    <string name="manual_string_line3">「ジャンケンに負けろ！」</string>
    <string name="manual_string_line4">という指示がでますので</string>
    <string name="manual_string_line5">その指示に従ってグー、チョキ、パーをタップしてください。</string>
    <string name="manual_string_line6">正解すると得点が加算されていきます。 </string>
    <string name="manual_string_line7">いっぱい遊んで、高得点を狙ってください！</string>
</resources>